# jtaylor100.github.io

./: .gitignore  .site.hs.swp  .values.markdown.swp  CNAME  LICENSE  Makefile  README.md  about.html  about.markdown  archive.html  career.html  deploy.bash  generate_post_list.sh  index-p.md  index.html  index.markdown  issues.html  joshtaylorblog.cabal  make-post.php  packages.yaml  post-template.php  site.hs  stack.yaml  styles.css  todo.org  values.html  values.markdown
css/: default.css  layout.css  layout.css.map  tombstoned.css
infrastructure/: .terraform.lock.hcl  cloud-init.yaml  terraform.tf
joshtaylorblog/: about.markdown  index.html  site.hs
js/: Hyphenator.js  hylo.js
markdown/: getting-the-balance-right.markdown  high-anxiety.markdown  inadequacy.markdown  kebab-shop.markdown  orange-lit-runs.markdown  profoundly-immoral-and-wicked.markdown  soap-operas.markdown
posts/: berlin-retrospective.html  berlin-retrospective.markdown  catalyst.markdown  getting-the-balance-right.html  high-anxiety.html  inadequacy.html  journaling.html  journaling.markdown  journaling.markdown~  kebab-shop.html  meditating-on-the-tube.html  on-employment-and-personal-identity.html  on-employment-and-personal-identity.markdown  on-inevitable-exploitation.html  on-information-knowledge-and-wisdom.html  on-leisurism.markdown  on-millennials.html  on-millennials.markdown  on-moving-countries.html  on-moving-countries.markdown  orange-lit-runs.html  planet-of-the-brains.html  profoundly-immoral-and-wicked.html  soap-operas.html  society-values.markdown  xxx.html  xxx.md
(+28 files in other folders)
