name:                joshtaylorblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jtaylor100/joshtaylorblog#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Taylor
maintainer:          josh.taylor0686@gmail.com
copyright:           (c) 2014-2018 Josh Taylor
category:            unknown
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable joshtaylorblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -Werror -Wall
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       text,
                       doctemplates
